# neko-quiz

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  config.toml  dev.sh  docker-compose.yml  prod.sh
.github/workflows/: docker-publish.yml  docker.yml  release.yml  shuttle.yml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: api.rs  app.rs  components.rs  error.rs  main.rs  models.rs  state.rs
scripts/: build.sh  clean.sh  dev.sh  prod.sh
server/api/: Cargo.toml
server/api/src/: handlers.rs  lib.rs  models.rs  state.rs
server/shuttle/: Cargo.toml
server/shuttle/src/: main.rs
server/standalone/: Cargo.toml
server/standalone/src/: main.rs
src/: api.rs  app.rs  lib.rs  main.rs
src/models/: config.rs  mod.rs  quiz.rs
