[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-hooks = "0.3.0"
yew-bootstrap = "0.10.0"
gloo-net = "0.4.0"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.65"
serde_json = "1.0.108"
